
<resources>
    <string name="app_name">Bikki Electronics</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="purchase_history">Purchase History</string>
    <string name="hint_search_products">Search products…</string>
    <string name="app_title">BikkiElectronics</string>
    <string name="price_fmt">$%.2f</string>
    <string name="back">Back</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>
